@startuml

title Class Diagram

class Buyer {
    - userId: Integer
    - username: String
    - followed: List<UserData>
}

class Seller {
    - userId: Integer
    - userName: String
    - followers: List<UserData>
    - publication: List<Publication>

}

class UserData {
    - userId: Integer
    - userName: String
}

class Publication {
    - postId: int
    - date: LocalDate
    - product: Product
    - category: Integer
    - price: Double
}

class Product {
    - productId: Integer
    - productName: String
    - type: String
    - brand: String
    - color: String
    - notes: String

}

Seller "1" *-- "0..*" UserData
Buyer "1" *-- "0..*" UserData

Product "1" --* "1..*" Publication


@enduml